# pack_liascript_course

./: README.md  pyproject.toml
src/pack_liascript_course/: __init__.py  pack_liascript_course.py
tests/: test_pack_liascript_course.py
